# AdventOfCode

./: .gitignore  README.md  advent.cabal  stack.yaml
Cpp/: CMakeLists.txt  main.cpp
DotNet/AdventOfCode/: AdventOfCode.sln
DotNet/AdventOfCode/AdventOfCode/: AdventOfCode.csproj  Binary.cs  DictionaryExtensions.cs  EnumerableExtensions.cs  HashableList.cs  Problem.cs  ProblemRunner.cs  Program.cs  PuzzleFetcher.cs
DotNet/AdventOfCode/AdventOfCode/AdventLib/: DictionaryExtensions.cs  DoubleEndedList.cs  DoubleEndedQueue.cs  EnumerableExtensions.cs  EnumerableTupleExtensions.cs  HashableList.cs  ListExtensions.cs  ObjectExtensions.cs  RegexExtensions.cs  SpanExtensions.cs  TupleExtensions.cs  Unit.cs
DotNet/AdventOfCode/AdventOfCode/AdventLib/AStar/: AStarSearch.cs
DotNet/AdventOfCode/AdventOfCode/AdventLib/BreadthFirstSearch/: BfsNode.cs  BfsSearchConfig.cs  BreadthFirstSearch.cs
DotNet/AdventOfCode/AdventOfCode/AdventLib/DataStructures/: DoubleEndedList.cs
DotNet/AdventOfCode/AdventOfCode/AdventLib/Grid/: CommonGrids.cs  ConstantGrid.cs  CoordinateGrid.cs  DefinedSizeGridExtensions.cs  DefinedSizeMappedGrid.cs  EnumerableGridExtensions.cs  GeneratedGrid.cs  GridDirection.cs  GridExtensions.cs  GridPoint.cs  GridRegion.cs  IDefinedSizeGrid.cs  IGrid.cs  IMutableGrid.cs  MappedGrid.cs  NonexistentCellException.cs  ShiftedGrid.cs  SolidGrid.cs  SparseGrid.cs  WindowGrid.cs  WrappingGrid.cs
DotNet/AdventOfCode/AdventOfCode/AdventLib/Grid/SparseGrids/: IFiniteSparseGrid.cs  ISparseGrid.cs  SparseGrid.cs  SparseGridExtensions.cs
DotNet/AdventOfCode/AdventOfCode/AdventLib/Intcode/: IntcodeComputer.cs
DotNet/AdventOfCode/AdventOfCode/AdventLib/Parsing/: SeparatedGroupParser.cs
DotNet/AdventOfCode/AdventOfCode/Days/: Advent202001.cs  Advent202002.cs  Advent202003.cs  Advent202004.cs  Advent202005.cs  Advent202006.cs  Advent202007.cs  Advent202008.cs  Advent202009.cs  Advent202010.cs  Advent202011.cs  Advent202012.cs  Advent202013.cs  Advent202014.cs  Advent202015.cs  Advent202016.cs  Advent202017.cs  Advent202018.cs  Advent202019.cs  Advent202020.cs  Advent202021.cs  Advent202022.cs  Advent202023.cs  Advent202024.cs  Advent202025.cs
DotNet/AdventOfCode/AdventOfCode/Days/2019/: Advent201902.cs  Advent201905.cs  Advent201909.cs
DotNet/AdventOfCode/AdventOfCode/Days/2020/: Advent202001.cs  Advent202002.cs  Advent202003.cs  Advent202004.cs  Advent202005.cs  Advent202006.cs  Advent202007.cs  Advent202008.cs  Advent202009.cs  Advent202010.cs  Advent202011.cs  Advent202012.cs  Advent202013.cs  Advent202014.cs  Advent202015.cs  Advent202016.cs  Advent202017.cs  Advent202018.cs  Advent202019.cs  Advent202020.cs  Advent202021.cs  Advent202022.cs  Advent202023.cs  Advent202024.cs  Advent202025.cs
DotNet/AdventOfCode/AdventOfCode/Days/2021/: Advent202101.cs  Advent202102.cs  Advent202103.cs  Advent202104.cs  Advent202105.cs  Advent202106.cs  Advent202107.cs  Advent202108.cs  Advent202109.cs  Advent202110.cs  Advent202111.cs  Advent202112.cs  Advent202113.cs  Advent202114.cs  Advent202115.cs  Advent202116.cs
DotNet/AdventOfCode/AdventOfCode/Days/2022/: Advent202201.cs  Advent202202.cs  Advent202203.cs  Advent202204.cs  Advent202205.cs  Advent202206.cs  Advent202207.cs  Advent202208.cs  Advent202209.cs  Advent202210.cs  Advent202211.cs  Advent202212.cs  Advent202213.cs  Advent202214.cs  Advent202215.cs
DotNet/AdventOfCode/AdventOfCode/Parsing/: SeparatedGroupParser.cs
DotNet/AdventOfCode/AdventTests/: AStarTests.cs  AdventTests.csproj  DictionaryTests.cs  DoubleEndedListTests.cs  DoubleEndedQueueTests.cs  EnumerableTests.cs  GridPointTests.cs  UnitTest1.cs
DotNet/AdventOfCode/AdventTests/DataStructures/: DoubleEndedListTests.cs  Tree.cs
DotNet/AdventOfCode/AdventTests/Days/: Advent202019Tests.cs
DotNet/AdventOfCode/AdventTests/Days/2019/: Advent202019Tests.cs
DotNet/AdventOfCode/AdventTests/Days/2022/: Advent202209Tests.cs
DotNet/AdventOfCode/AdventTests/Grid/: DefinedSizeGridTests.cs  GridPointTests.cs  GridRegionTests.cs  ShiftedGridTests.cs  WarpTests.cs  WindowTests.cs
DotNet/AdventOfCode/AdventTests/Intcode/: IntcodeComputerTests.cs
DotNet/AdventOfCode/AdventTests/Parsing/: SeparatedGroupParserTests.cs
DotNet/AdventOfCode/AdventTests/Search/: SearchTests.cs
DotNet/AdventOfCode/AdventTests/Spans/: SpanSplitTests.cs
DotNet/AdventOfCode/AdventTests/TestUtils/: RandomExtensions.cs
Haskell/: advent.cabal  stack.yaml
Haskell/advents/2016/: Advent17.hs  Advent8.hs
Haskell/advents/2017/: Advent2.hs  Advent3.hs  Advent4.hs  Advent6.hs  Advent7.hs  Advent9.hs
Haskell/advents/2019/: Advent1.hs  Advent2.hs  Advent3.hs  Advent4.hs  Advent7.hs  Advent8.hs
Haskell/lib/: AdventLib.hs  Grid.hs  Parsing.hs  Search.hs  Timing.hs
Java/aoc/: pom.xml
Java/aoc/src/main/java/com/spencesellers/aoc/: Main.java
Java/aoc/src/main/java/com/spencesellers/aoc/inputsources/: FileInput.java
Python/: advent.py  pyproject.toml  utils.py
Python/days/: day_2024_01.py  day_2024_02.py  day_2024_03.py  day_2024_04.py  day_2024_05.py
Python/grid/: __init__.py  base.py  common_grids.py  point.py  solid.py
Python/tests/grid/: test_base.py  test_point.py  test_solid_grid.py
Racket/: advent-2018-02.rkt  advent-2018-1.rkt  advent-2018-17.rkt  advent-2018-18.rkt  advent-2019-01.rkt  lib.rkt
Rust/: .gitignore  Cargo.toml
Rust/src/: advent_2018_1.rs  advent_2018_10.rs  advent_2018_11.rs  advent_2018_12.rs  advent_2018_13.rs  advent_2018_2.rs  advent_2018_3.rs  advent_2018_4.rs  advent_2018_5.rs  advent_2018_6.rs  advent_2018_7.rs  advent_2018_8.rs  advent_2018_9.rs
Rust/src/adventlib/: count_map.rs  lib.rs  ring_buffer.rs  zip_list.rs
Rust/src/adventlib/grid/: calculated_grid.rs  mod.rs  point.rs  solid_grid.rs  window.rs
Typescript/: bunfig.toml  package.json
Typescript/days/: advent2025day1.ts  advent2025day2.ts
advents/: Advent1.hs
advents/2015/: Advent1.hs
advents/2016/: Advent17.hs  Advent7.hs  Advent8.hs
advents/2017/: Advent1.hs  Advent4.hs  Advent5.hs  Advent6.hs  Advent7.hs  Advent8.hs
lib/: AdventLib.hs  Parsing.hs  Search.hs
(+4 files in other folders)
