name:                advent
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/advent#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split
                     , safe
                     , lens

  exposed-modules:     AdventLib
                     , Search

executable advent1
  hs-source-dirs:      advents
  main-is:             Advent1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , advent