name:                advent
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/advent#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split
                     , safe
                     , lens
                     , parsec
                     , pureMD5
                     , bytestring

  exposed-modules:     AdventLib
                     , Search
                     , Parsing
                     , Grid

executable advent15-1
  hs-source-dirs:      advents/2015
  main-is:             Advent1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , advent

executable advent16-7
  hs-source-dirs:      advents/2016
  main-is:             Advent7.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , advent
                     , parsec
                     , lens

executable advent16-8
  hs-source-dirs:      advents/2016
  main-is:             Advent8.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , advent
                     , parsec
                     , lens

executable advent16-17
  hs-source-dirs:      advents/2016
  main-is:             Advent17.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , advent
                     , lens

executable advent17-1
  hs-source-dirs:      advents/2017
  main-is:             Advent1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , advent
                     , lens

executable advent17-2
  hs-source-dirs:      advents/2017
  main-is:             Advent2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , advent
                     , lens
                     , split

executable advent17-3
  hs-source-dirs:      advents/2017
  main-is:             Advent3.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , advent
                     , lens
                     , split
                     , containers

executable advent17-4
  hs-source-dirs:      advents/2017
  main-is:             Advent4.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , advent
                     , lens
                     , split

executable advent17-5
  hs-source-dirs:      advents/2017
  main-is:             Advent5.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , advent
                     , lens
                     , split