[package]
name = "rust_advent"
version = "0.1.0"
authors = ["Spencer Sellers"]

[lib]
name = "adventlib"
path = "src/adventlib/lib.rs"

[[bin]]
name = "advent_2018_1"
path = "src/advent_2018_1.rs"

[[bin]]
name = "advent_2018_2"
path = "src/advent_2018_2.rs"

[[bin]]
name = "advent_2018_3"
path = "src/advent_2018_3.rs"

[[bin]]
name = "advent_2018_4"
path = "src/advent_2018_4.rs"

[[bin]]
name = "advent_2018_5"
path = "src/advent_2018_5.rs"

[[bin]]
name = "advent_2018_6"
path = "src/advent_2018_6.rs"

[[bin]]
name = "advent_2018_7"
path = "src/advent_2018_7.rs"

[[bin]]
name = "advent_2018_8"
path = "src/advent_2018_8.rs"

[dependencies]
itertools = "*"
regex = "*"
lazy_static="*"
failure = "*"
